<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about">About Us</string>
    <string name="acc_info">Account Summary</string>
    <string name="accountName">Account Name:</string>
    <string name="fromDate">From Date :</string>
    <string name="toDate">To Date :</string>
    <string name="accountNo">Account No:</string>
    <string name="accountStatus">Account Status:</string>
    <string name="addBeneficiary">Add Beneficiary</string>
    <string name="addDomesticBeneficiary">Add Domestic Beneficiary</string>
    <string name="addSmblBeneficiary">Add SMBL Beneficiary</string>
    <string name="amount">Amount</string>
    <string name="amountOnHold">Amount on hold</string>
    <string name="app_copyright">Copyright© 2017 Agrani Bank Limited</string>
    <string name="app_name">AG Connect</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bank_email">Florabank.Interet@gmail.com</string>
    <string name="bank_name">Flora Internet Bank</string>
    <string name="beftnTransfar">BEFTN Transfer</string>
    <string name="beneficiaryAcNumber">Beneficiary Account Number</string>
    <string name="beneficiaryAddress">Beneficiary Address</string>
    <string name="beneficiaryName">Beneficiary Nick Name</string>
    <string name="bill_pay">Bill Payment</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="branchName">Branch Name:</string>
    <string name="branchRoutingNumber">Branch Routing Number</string>
    <string name="btnAgree">Agree</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnContinue">Continue</string>
    <string name="btnDisagree">Disagree</string>
    <string name="btnSend">Send</string>
    <string name="btnTermsAgree">Agree</string>
    <string name="btnTermsDisagree">Disagree</string>
    <string name="btn_done">Done</string>
    <string name="cashBalance">Cash Balance</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cheque_req">Cheque</string>
    <string name="confirmPinTitle">Confirm Pin</string>
    <string name="date">Date:</string>
    <string name="dom_trans">Domestic Transfer</string>
    <string name="emailHint">User ID or Email</string>
    <string name="emiDate">EMI Date</string>
    <string name="emiSize">EMI Size</string>
    <string name="equal">(=)</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="forgot_pass_dialog_title">Please contact with your nearest SMBL branch or Head office!</string>
    <string name="forgot_password_dialog_title">Forgot Password!</string>
    <string name="forgot_pin">Forgot Pin ?</string>
    <string name="ftSuccessNewTransfer">Transfer Another</string>
    <string name="ftSuccessOk">OK</string>
    <string name="generic_error">Operation unsuccessful, please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_reg_text">This email is already registered or may be your are trying to reinstall this app. For further query please contact with your nearest SMBL branch.</string>
    <string name="invalid_registration_title">Failed!</string>
    <string name="lastTransaction">Last Transaction:</string>
    <string name="loadSourceAccount">Load Source Account</string>
    <string name="loanOutstanding">Loan Outstanding</string>
    <string name="loginContinueButton">Continue</string>
    <string name="logout">Logout</string>
    <string name="loinPinTitle">Please Enter Pin</string>
    <string name="minimumBalanceRequired">Minimum Balance Required</string>
    <string name="minus">(-)</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="more_title">More</string>
    <string name="netBalance">Net Balance</string>
    <string name="no_Internet_dialog_Text">Please check your internet connection.</string>
    <string name="no_Internet_dialog_title">No Internet!</string>
    <string name="nointernet">Please check your internet connection.</string>
    <string name="openDate">Open Date:</string>
    <string name="otherAcTransfar">Other Account</string>
    <string name="otpInput">Enter the OTP</string>
    <string name="otpInputHeader">Please Enter the <b>OTP</b> sent to your Registered mobile/ email to activate Shimanto Bank services.</string>
    <string name="otpResend"><u>Resend OTP</u></string>
    <string name="otpResendHeader">If you have not received <b>OTP</b> yet, you can request again.</string>
    <string name="otpTitle">OTP</string>
    <string name="otp_input_dialog_text">A One Time Passsword(OTP) has been sent to your registered mobile/email. Please enter below.</string>
    <string name="otp_input_dialog_title">Attention!</string>
    <string name="ownAccTransfar">Own Account</string>
    <string name="passwordHint">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pinHint">Enter Pin</string>
    <string name="pinRegistrationTitle">Please enter a new 6 digit PIN to continue from next login</string>
    <string name="pinSuccessHeader" />
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="pleaseSelectDate">Please select Start and End date</string>
    <string name="plus">(+)</string>
    <string name="profile">Profile</string>
    <string name="remainingInstalment">Remaining Instalment No</string>
    <string name="remarksHint">Remark</string>
    <string name="rtgsTransfar">RTGS Transfer</string>
    <string name="smblTransfar">SMBL Transfer</string>
    <string name="termsDownload"><u>Download Terms &amp; Condition</u></string>
    <string name="timeout">Connection timed out, please try again.</string>
    <string name="title_branch">ATM &amp; Branch</string>
    <string name="title_contact">Contact Us</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_faq">FAQ</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tab_start_date">Start Date</string>
    <string name="toolbar_title">"  Agrani Bank"</string>
    <string name="topup">Topup</string>
    <string name="totalEmi">Total number of Emi</string>
    <string name="trans_fund">Fund Transfer</string>
    <string name="ttile_tab_end_date">End Date</string>
    <string name="unclearedFund">Uncleared Fund</string>
    <string name="name">Name</string>
    <string name="acc_name">Acc Name:</string>
    <string name="bank_search">Bank Search</string>
    <string name="map">Map</string>
    <string name="delete_beneficiary">Delete Beneficiary</string>
</resources>