<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginImageViewConnect"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_connect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginBottom="10.0dip"
        android:layout_weight="6.0"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_input_section"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@drawable/login_border_box_opacity"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="25.0dip"
            android:paddingRight="25.0dip"
            android:paddingTop="10.0dip">

            <ImageView
                android:id="@+id/loginImageViewBanner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/login_banner" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/general_border_box"
                android:drawableLeft="@drawable/email_hint_icon"
                android:drawableStart="@drawable/email_hint_icon"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="5.0dip"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/general_border_box"
                android:drawableLeft="@drawable/password_hint_icon"
                android:drawableStart="@drawable/password_hint_icon"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5.0dip"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20.0dip">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewNorton"
                        android:layout_width="wrap_content"
                        android:layout_height="40.0dip"
                        android:layout_gravity="left"
                        app:srcCompat="@drawable/logo_norton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/loginContinueButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40.0dip"
                        android:layout_gravity="right"
                        android:background="@drawable/general_button_ripple_effect"
                        android:gravity="center"
                        android:onClick="onClickContinue"
                        android:paddingLeft="8.0dip"
                        android:paddingRight="8.0dip"
                        android:text="@string/loginContinueButton"
                        android:textColor="@color/colorWhite"
                        android:textSize="20.0dip" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16.0dip"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:text="@string/app_copyright"
            android:textColor="@color/colorTextBlackBlur"
            android:textSize="14.0dip"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>