<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5.0dip"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topUpStartButtonLayout"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_margin="5.0dip"
                android:background="@drawable/ripple_effect_f_g"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10.0dip">

                <ImageView
                    android:id="@+id/topUpButton"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.0"
                    android:padding="5.0dip"
                    app:srcCompat="@drawable/top_up_icon" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3.0"
                    android:gravity="center_vertical"
                    android:text="@string/topup"
                    android:textColor="@color/colorWhite"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/topUpBeneciciaryLayout"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_margin="5.0dip"
                android:background="@drawable/ripple_effect_f_g"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/topUpBeneciciary"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.0"
                    android:gravity="center_vertical"
                    android:padding="20.0dip"
                    app:srcCompat="@drawable/add_beneficiary_icon" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3.0"
                    android:gravity="center_vertical"
                    android:text="@string/addBeneficiary"
                    android:textColor="@color/colorWhite"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/topUpBeneciciaryDeleteLayout"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_margin="5.0dip"
                android:background="@drawable/ripple_effect_f_g"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/topUpBeneciciaryDelete"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2.0"
                    android:gravity="center_vertical"
                    android:padding="20.0dip"
                    app:srcCompat="@drawable/delete_file" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3.0"
                    android:gravity="center_vertical"
                    android:text="@string/delete_beneficiary"
                    android:textColor="@color/colorWhite"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>